--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 body{
-    background-color: rgb(229, 232, 240);
+    background-color: rgb(246,248,253);
     font-family: 'Roboto', sans-serif;
     color:  rgb(80, 80, 80);
 }
@@ -40,7 +40,7 @@ h2{
     margin-top: 10vh;
 }
     #open__title{
-        color:  rgb(69, 95, 153);
+        color:  rgb(58, 97, 180);
         font-size: 3rem;
         font-family: 'Josefin Sans', sans-serif;
     }
@@ -49,12 +49,9 @@ h2{
         margin: 40px 0;
         font-size: 1.1rem;
         color:  rgb(102, 102, 102);
+        line-height: 2rem;
+        font-weight: 400;
     }
-
-#center-skills{
-    display:flex;
-    justify-content: center;
-}
 
 
 .section{
@@ -109,19 +106,19 @@ h2{
                 flex-wrap: wrap;
             }
                 .project__button{
-                    border: 3px solid rgb(53, 84, 151);
+                    border: 3px solid rgb(58, 97, 180);
                     padding: 8px;
                     margin-right: 6px;
                     margin-bottom: 6px;
                     border-radius: 6px;
                     cursor:pointer;
-                    background-color: rgb(53, 84, 151);
+                    background-color: rgb(58, 97, 180);
                     color: white
                 }
                 .project__button.more{
                     border: 3px solid rgb(77, 115, 199);
                     background-color: white;
-                    color: rgb(53, 84, 151)
+                    color: rgb(58, 97, 180)
                 }
                 .project__button:hover,
                 .project__button:active{
@@ -129,7 +126,18 @@ h2{
                     border-color:  rgb(77, 115, 199);
                     color:white
                 }
+#contact-wrap{
+    margin: 100px auto;
+    margin-bottom:140px;
+    text-align: center;
+}
 
+
+
+#footer{
+    margin: 40px auto;
+    text-align: center;
+}
 
 @media (min-width: 750px) {
 #open{
@@ -137,12 +145,12 @@ h2{
 }   
    
     #open__title{
-        font-size: 5rem;
+        font-size: 4.5rem;
     }
 
     #open__description{
         margin: 80px 0;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 }
 
