--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,10 @@
 }
 
 body{
-    background-color: rgb(246,248,253);
+    background-color: rgb(246, 249, 253);
     font-family: 'Roboto', sans-serif;
     color:  rgb(80, 80, 80);
+    margin: 0px;
 }
 
 h1{
@@ -22,6 +23,44 @@ h2{
     margin-top:10px;
     margin-bottom: 35px;
 }
+
+#nav-wrap{
+    position: sticky;
+    top: -45px;
+    z-index: 2;
+    width:fit-content;
+    margin:0px auto;
+    transition: transform 300ms ease-in-out 100ms;
+    padding-bottom:10px;
+}
+    #topnav{
+        background-color: white;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        border-bottom: 6px solid rgb(115, 142, 201);
+        box-shadow: 0 1px 2px rgba(0,0,0,0.5);
+        display:flex;
+        width: fit-content;
+        flex-direction:row;
+        align-items: center;
+        justify-content: center;
+    }
+        .topnav__item{
+            margin: 5px 8px;
+            padding:8px;
+            text-decoration: none;
+            border-radius: 50px;
+            color:  rgb(80, 80, 80);
+        }
+        .topnav__item:hover{
+            background-color: rgb(227, 230, 233);
+        }
+        a.anchor {
+            display: block;
+            position: relative;
+            top: -45px;
+            visibility: hidden;
+        }
 
 .underline-title{
     border-bottom: 4px solid black;
